[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/PlayerStats.gd" type="Script" id=1]
[ext_resource path="res://interface/hud-stats/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/hud-stats/MusicBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/hud-stats/ExperienceBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/theme/fonts/source_code_pro_26.tres" type="DynamicFont" id=5]

[node name="PlayerStats" type="VBoxContainer"]
pause_mode = 1
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 8
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
pause_mode = 2
margin_right = 600.0
margin_bottom = 48.0

[node name="MusicBar" parent="." instance=ExtResource( 3 )]
margin_top = 56.0
margin_right = 600.0
margin_bottom = 104.0

[node name="ExperienceBar" parent="." instance=ExtResource( 4 )]
margin_top = 112.0
margin_right = 600.0
margin_bottom = 160.0

[node name="Score" type="Label" parent="."]
margin_top = 168.0
margin_right = 600.0
margin_bottom = 202.0
custom_fonts/font = ExtResource( 5 )
text = "Score : 0"
align = 1
valign = 1

[node name="EffectTime" type="Label" parent="."]
visible = false
margin_top = 210.0
margin_right = 600.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 5 )
text = "Effect : 0"
align = 1
valign = 1
